# CPAC_regtest_pack

./: generate_correlations_summary.py  requirements.txt
.circleci/: config.yml
correlations/: compare_pipelines.py  cpac_correlations.py  file_utils.py  main.py  quick_summary.py  run.py  s3_utils.py  summary.py
cpac_correlations/: CHANGELOG.md  cpac_correlations.py  pyproject.toml
heatmaps/: .pylintrc  README.md  __init__.py  correlation_directory.py  correlation_features.py  correlation_heatmaps.py  correlation_matrix.py  directory.py  features.py  generate_correlation_matrix.py  heatmaps.py  pyproject.toml  requirements.txt  subjects.py
heatmaps/configs/: defaults.py  subjects.py
heatmaps/src/cpac_heatmaps/: __about__.py  __init__.py  directory.py  features.py  generate.py  heatmaps.py  matchup.py  subjects.py
summary/: requirements.txt  run_summary.py
summary/summary_app/: __init__.py  config.py  model.py
summary/summary_app/correlations/: compare_pipelines.py  cpac_correlations.py  error_handling.py  file_utils.py  main.py  plot.py  quick_summary.py  utils.py
summary/summary_app/entity/: utils.py
summary/summary_app/logging/: logger.py
summary/summary_app/main/: models.py  routes.py  utils.py
summary/summary_app/static/: main.css
summary/summary_app/static/plots/: all_boxplot  all_boxplot.html  selected_boxplot.html
summary/summary_app/templates/: all_boxplot.htm  home.htm  layout.htm  pipeline_view.htm  selected_boxplot.htm
